# vgtr_py

./: .gitignore  CLAUDE.md  README.md  README_zh.md  pyproject.toml
configs/: GeoTrussRover.json  annotate_examples.py  claw.json  convert_examples.py  crawling-bot.json  crawling-lobster.json  dancing-bot.json  dog-standing.json  example.json  globe-fish.json  living-flower-I.json  living-flower-II.json  running-dog.json  static-turtle.json  transformer-rocket-I.json  transformer-rocket-II.json  walking-bot-with-gait.json  wandering-bot.json
docs/: XPBD.md  api.rst  architecture.md  conf.py  implementation-plan.md  index.rst  overview.md  overview.rst  physics.md  roadmap.md  simulator-api-design.md  ui-interaction.rst
examples/: README.md  README_zh.md  env_minimal.py  projection_minimal.py  runtime_viser_batch_loop.py  runtime_viser_loop.py  runtime_viser_loop_manual_control.py  sim_minimal.py  ui_minimal.py  vector_env_minimal.py
src/vgtr_py/: __init__.py  app.py  batch.py  commands.py  config.py  data.py  engine.py  env.py  gym_compat.py  history.py  kinematics.py  model.py  projection.py  rendering.py  schema.py  sim.py  topology.py  ui.py  vector_env.py  workspace.py
src/vgtr_py/adapters/: __init__.py  gym_env.py  vector_env.py
src/vgtr_py/legacy/: __init__.py  engine_workspace.py
src/vgtr_py/runtime/: __init__.py  alloc.py  kernels.py  observe.py  project.py  reward.py  session.py  state.py
tests/: test_app.py  test_cli.py  test_commands.py  test_convert_examples.py  test_history.py  test_model_env.py  test_rendering.py  test_schema_runtime.py  test_topology.py  test_ui.py  test_workspace.py
